# pyloidal

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
pyloidal/: __init__.py  cocos.py
src/pyloidal/: cocos.py
tests/: test_cocos.py
